# sticker-python

./: Cargo.toml
src/: decoder.rs  lib.rs  sentence.rs
tests/: test_sentence.py
