[package]
name = "sticker-python"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Sticker Python module"
license = "BlueOak-1.0.0"

[lib]
name = "sticker"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[dependencies]
conllx = "0.12"
stdinout = "0.4"
rand = "0.7"
rand_xorshift = "0.2"
sticker-encoders = {git = "https://github.com/stickeritis/sticker-encoders", rev="8dd3bfa"}
failure = "0.1"
edit_tree = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"